# FastRAG

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: code-checks.yaml
FastRag/app_tools/: __init__.py  self_logger.py
FastRag/app_tools/tools_for_validate/: path_validate.py
FastRag/chunker/: __init__.py
FastRag/config/: const.py  custom_raises.py
FastRag/document_processor/: __init__.py  models.py
FastRag/document_processor/parsers/: __init__.py
FastRag/embedder/: __init__.py
